# timeledger

./: .travis.yml  Cargo.toml  LICENSE  README.md
src/: cli.yml  lib.rs  main.rs  options.rs  output.rs  timeledger.rs
src/timeledger/: json_timeledger.rs
tests/: integration_tests.rs  timeledger.json  timeledger_past_day_appears_in_the_future.json
