[package]
name = "timeledger"
version = "0.1.1"
authors = ["Biser Milanov <bmilanov11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
clap = {version = "~2.27.0", features = ["yaml"]}
libmath = "0.2.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
